Overflow fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -419,7 +419,7 @@ body {
 }
 
 .product-card__background {
-  height: 281px;
+  height: auto;
   width: 100%;
   border-radius: 8px;
   box-sizing: border-box;
@@ -432,6 +432,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: end;
+  overflow: hidden;
 }
 
 .product-card__title {
@@ -1022,7 +1023,6 @@ input[type='search']::-webkit-search-results-decoration {
 
 .banner__background {
   width: 570px;
-  height: 268px;
   border-radius: 16px;
   background: var(--special-neutral);
 
@@ -1180,7 +1180,7 @@ input[type='search']::-webkit-search-results-decoration {
   border-radius: 4px;
   border: 1px solid var(--basic-neutral);
   box-sizing: border-box;
-  padding: 13px 0 13px 16px;
+  padding: 13px 16px 13px 16px;
 
   font-style: normal;
   font-weight: 400;
@@ -1618,8 +1618,11 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* процент жира */
 
+.filter-text {
+  white-space: nowrap;
+}
+
 .fat-content-container {
-  width: 383px;
   height: 64px;
 }
 
@@ -1630,7 +1633,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .fat-content-list {
   background: rgba(252, 252, 252, 0.3);
-  width: 383px;
   height: 36px;
   box-sizing: border-box;
   margin: 0;
@@ -1689,7 +1691,6 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Наполнители */
 
 .filler-container {
-  width: 604px;
   height: 68px;
 }
 
@@ -1704,7 +1705,6 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 8px;
   padding: 10px 24px;
 
-  width: 604px;
   height: 40px;
   border-radius: 18px;
   display: flex;
